03-argocd-apps/manifests/hello/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-hello
spec:
  ingressClassName: nginx
  rules:
    - host: "hello.thebrainsurf.site"
      http:
        paths:
          - pathType: ImplementationSpecific
            path: "/"
            backend:
              service:
                name: hello-service
                port:
                  number: 80
